Fix button alignment

--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -1850,9 +1850,8 @@ img.clippy {
   border:none;
 }
 .btn-download {
-  line-height: normal;
   float: right;
-  margin-top: -2px;
+  margin-top: -3px;
 }
 .script-file-header {
     width: 100%;
